Final Product unless otherwise stated

--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Seth Ochoa's Professional Page</title>
+    <link rel="stylesheet" href="Style.CSS" />
+    <link rel="stylesheet" href="layout.css" />
 </head>
 <body>
-    <p>Hello World</p>
+  <header>
+    <nav>
+      <ul class="home-menu">
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#contact-me">CONTACT ME</a></li>
+      </ul>
+
+      <ul class="second-half">
+        <li><a href="https://github.com/SethOchoa">PORTFOLIO</a></li>
+        <li><a href="#services">SERVICES</a></li>
+        <li><a href="https://www.linkedin.com/in/seth-ochoa-78477b281/">HIRE ME</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <div class="container">
+    <div class="logo-container">
+      <img
+          src="img/AndrizoLogoClear.png"
+          class="logo"
+          alt="Andrizomai Solutions Logo"
+        />
+    </div>
+
+    <section id="home">
+      <div class="detail">
+        <h1>I'm Seth <span>Ochoa</span></h1>
+        <p>
+          This is my official BotFather bot where we start <br />working
+          together and having fun!
+        </p>
+
+        <a href="#">GET STARTED</a>
+      </div>
+
+      <div class="images">
+        <img src="img/MeNKids.png" class="kiddos" />
+      </div>
+    </section>
+    </div>
+    
+    <div class="about-me-container">
+    <section id="about">
+      <img src="img/MeNJolie.png" class="warden-and-i">
+      <img src="img/Buggas.png" class="buggas-sliding">
+      <img src="img/Buddy.png" class="buddy-loading">
+      <p class="about-me-greeting">
+       Greetings! <br>I'm Seth Ochoa, a realtor with a fascinating background. As
+       the son of an immigrant, I've grown up appreciating diverse perspectives
+       and the value of hard work. After serving in the Navy, where I developed
+       discipline and teamwork skills, I transitioned to a career in law
+       enforcement as a police officer. <br>Now, I'm embarking on a new path as a
+       software developer, merging my past experiences with my passion for
+       technology. I'm eager to contribute my dedication, adaptability, and
+       attention to detail to create innovative solutions. Continuous learning
+       is important to me, and I'm excited about the endless possibilities that
+       lie ahead in my software development career. Let's connect and make a
+       positive impact together!
+     </p> 
+   </section>
+  </div>
+    
+  <div class="contact-me-container">
+    <section id="contact-me">
+      <p class="contact-me-list-1">
+        <ul class="contact-me-list1">
+          <li><a href="https://www.instagram.com/grumpydaddy_realtor/">Instagram</a></li>
+          <li><a href="https://www.facebook.com/GrumpyDaddyRealtor">Facebook</a></li>
+        </ul>
+      </p>
+
+      <img src="img/Seth_Ochoa.jpg" class="qr-code">
+
+    </section>
+  </div>
+
+  <div class="portfolio-container">
+    <section id="portfolio">
+      <!-- Portfolio section content -->
+    </section>
+  </div>
+
+  <div class="services-container">
+    <section id="services">
+      <p>
+        Realtor Services <br>
+
+As a realtor, I offer a range of services to ensure my clients have a smooth and successful real estate experience. With my background in negotiation, including specialized training from a former FBI Hostage Negotiator, and my knowledge of body language, I excel at picking up on even the smallest details, enabling me to advocate effectively for my clients' interests.
+
+My extensive investment in my own education and experience in real estate enables me to provide comprehensive guidance in various aspects of the industry. I have invested tens of thousands of dollars into learning about real estate investment strategies such as loan assumptions, seller finance, novations, and have gained personal experience in flipping houses and wholesaling. This knowledge allows me to offer valuable insights and advice to clients seeking investment opportunities or looking to optimize their real estate portfolio.
+
+As your realtor, I will work diligently to ensure that your buying or selling process is a seamless one. Whether you're a first-time homebuyer or a seasoned investor, I will leverage my negotiation skills and attention to detail to secure the best possible deal on your behalf. From understanding market trends to conducting thorough property evaluations, I will guide you every step of the way, making informed decisions that align with your goals. <br>
+
+<br>Junior Software Developer Services <br>
+
+In addition to my realtor services, I am also a budding software developer with expertise in C#, HTML, CSS, and soon JavaScript. As a junior developer, I bring a fresh perspective and a hunger for continuous learning to the field.
+
+With my programming knowledge, I can provide a range of software development services. Whether you need a web application, a user interface design, or assistance with troubleshooting and bug fixing, I am equipped to help. I am passionate about creating clean and efficient code, ensuring that the software solutions I develop are not only functional but also user-friendly.
+
+As a junior developer, I understand the importance of collaboration and teamwork. I am eager to work alongside experienced professionals, learning from their expertise while contributing my own skills and enthusiasm to deliver high-quality software solutions. I am committed to staying updated on the latest industry trends and technologies, constantly expanding my knowledge and skill set to provide innovative solutions to clients.
+
+<br><br>Whether you're in need of a realtor who can skillfully negotiate on your behalf and provide expert advice in real estate investment, or a junior software developer who can develop responsive and user-friendly applications, I am excited to offer my services. Let's work together to achieve your goals and exceed your expectations.
+      </p>
+    </section>
+  </div>
+
+  <div class="hire-me-container">
+    <section id="hire-me">
+      <!-- Hire Me section content -->
+    </section>
+  </div>
+
+  <footer>
+    <!-- Footer content -->
+  </footer>
+
+  </div>
 </body>
 </html>
